opam-version: "2.0"
name: "lame"
version: "0.3.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-lame"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["lame-dev"] {os-distribution = "alpine"}
  ["lame-devel"] {os-distribution = "centos"}
  ["lame-devel"] {os-distribution = "fedora"}
  ["lame-devel"] {os-family = "suse"}
  ["libmp3lame-dev"] {os-distribution = "debian"}
  ["libmp3lame-dev"] {os-distribution = "ubuntu"}
  ["lame"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-lame/issues"
dev-repo: "git+https://github.com/savonet/ocaml-lame.git"
synopsis:
  "Bindings for the lame library which provides functions for encoding mp3 files"
