(library
 (name lame)
 (public_name lame)
 (synopsis "OCaml bindings for lame")
 (foreign_stubs
  (language c)
  (extra_deps config.h)
  (names lame_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp config.h)
 (action
  (run ./config/discover.exe)))
